updates for site, and for build (worked-for-me-but-not-for-travis)