@@ -130,6 +130,39 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jdk9-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<jvm>${java.home.9}/bin/java</jvm>
+							<argLine>${surefire.argLine} --add-modules java.xml.bind,java.activation</argLine>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk10-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<jvm>${java.home.10}/bin/java</jvm>
+							<argLine>${surefire.argLine} --add-modules java.xml.bind,java.activation</argLine>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 			</plugin>
